# world_cup_2026_betting_strategy

./: .gitignore  CLAUDE.md  README.md
app/: README.md  app.py  pyproject.toml  requirements.txt  scraper.py  test_pipeline.py  ui_common.py
app/pages/: 1_🔴_Mundial_en_vivo.py  2_💰_Simulador_Apuestas.py  2_🧪_Qatar_2022.py  3_🗄️_Datos.py
app/src/: bayes.py  betting.py  db.py  dbview.py  elo.py  fifa_seed.py  ingest.py  models.py  odds.py  odds_store.py  pipeline.py  qatar_fixture.py  scraper.py  strategies.py  trueskill_model.py
app/tests/: test_betting.py  test_dbview.py  test_ingest.py  test_models.py  test_odds.py  test_odds_store.py  test_pipeline.py  test_strategies.py  test_trueskill.py
docs/superpowers/plans/: 2026-06-12-betting-simulator.md  2026-06-12-worldcup-db-scraper.md  2026-06-13-live-pages-split.md  2026-06-13-live-tabs-odds.md  2026-06-13-polymarket-regex-selector.md  2026-06-13-real-odds.md  2026-06-13-review-improvements.md  2026-06-13-strategy-lab.md  2026-06-13-trueskill-strategy.md  2026-06-13-workflow-restructure.md
docs/superpowers/specs/: 2026-06-12-betting-simulator-design.md  2026-06-12-combined-evolution-tab-design.md  2026-06-12-worldcup-db-scraper-design.md  2026-06-13-data-explorer-design.md  2026-06-13-live-pages-split-design.md  2026-06-13-live-tabs-odds-design.md  2026-06-13-real-odds-design.md  2026-06-13-review-improvements-design.md  2026-06-13-strategy-lab-design.md  2026-06-13-workflow-restructure-design.md
