[project]
name = "worldcup-elo-bayes"
version = "0.1.0"
description = "Monitor Elo + Bayes del Mundial con persistencia SQLite y scraper ESPN"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.0",
    "playwright>=1.45",
    "sqlmodel>=0.0.22",
    "trueskill>=0.4.5",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
